# hydrofia

./: .gitignore  LICENSE  README.md  batches.yaml  build_exe.py  ph_calculation_hydrofia.py  pyproject.toml  requirements.txt
hydrofia/: __init__.py  calculate.py  ctd.py  exporter.py  hydrofia.py  hydrofia_ph_template - kopia.xlsx  hydrofia_ph_template.xlsx  reference_batch.py  utils.py
hydrofia/gui/: colors.py  flet_app.py  saves.py  saves.yaml  texts.py  tooltip.py  tooltip_texts.py
hydrofia/src/: 2018-10-26 recalculate pH after Mueller.py
src/hydrofia/: __init__.py  calculate.py  lims.py  reference_batch.py
src/hydrofia/ext_src/: pH_mCP_Mueller.py  seacarb.py
src/hydrofia/gui/: flet_app.py  saves.py  saves.yaml
src/hydrofia/res/: testfile.txt
